code/human_written_tests/WebAssembly/processed_control_flow_validation/test_br_if_11.wast
(assert_invalid
  (module (func $type-false-arg-num-vs-void
    (block (br_if 0 (i32.const 0) (i32.const 0)))
  ))
  "type mismatch"
)